Add hardcoded umami tracking code

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title></title>
 		<script src="%PUBLIC_URL%/env-config.js"></script>
+		<script async src="https://analytics.christianw.de/script.js" data-website-id="db5949e1-a6a1-4a42-81fd-af15899398a1"></script>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
